--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,14 +1,41 @@
 server {
   host = "0.0.0.0"
-  port = 8080
-  domain = mocky.io
+  port = 8080                              , port = ${?SERVER_PORT}
 }
 
 database {
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost/mocky"
-  user = mocky
-  password = mocky
+  url = "jdbc:postgresql://localhost/mocky", url = ${?DATABASE_URL}
+  user = mocky                             , user = ${?DATABASE_USER}
+  password = mocky                         , password = ${?DATABASE_URL}
   thread-pool-size = 32
+}
+
+settings {
+  cors {
+    domain: mocky.io
+  }
+  throttle {
+    amount: 100                   # How many request are allowed by `per` duration
+    per: 1s                       # How often the throttling limit is renewed
+    max-clients: 100000           # Max number of clients allowed in parralel (more need more ram)
+  }
+  mock {
+    content-max-length = 1000000  # Maximum mock content length
+    secret-max-length = 64        # Maximum size for the mock secret
+  }
+  sleep {
+    max-delay = 60s               # Maximum duration allowed for the sleep feature
+    parameter = "mocky-delay"     # Parameter used to activate the sleep for the request
+  }
+  security {
+    bcrypt-iterations = 14        # How many bcrypt iterations to run for hashing password.
+                                  # Higher number means higher security but lag when creating mock
+                                  # See https://www.postgresql.org/docs/11/pgcrypto.html#PGCRYPTO-ICFC-TABLE
+  }
+  admin {
+    password = ${SETTINGS_ADMIN_PASSWORD}   # Administration passowrd
+    header = "X-Auth-Token"                 # Token in which the administration token must be sent
+  }
 }
 
