--- a/.github/workflows/mocky.yml
+++ b/.github/workflows/mocky.yml
@@ -1,4 +1,4 @@
-name: Scala CI
+name: Mocky CI
 
 on:
   push:
@@ -17,6 +17,17 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Force git fetch
+      uses: fnkr/github-action-git-bash@v1.1
+      with:
+        args: "git fetch --tags"
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    - name: 'Get Previous tag'
+      id: previoustag
+      uses: "WyriHaximus/github-action-get-previous-tag@master"
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     - name: Run tests
       run: sbt test it:test dist
     - name: rename dist file
@@ -24,11 +35,6 @@ jobs:
       with:
         source: "target/universal/mocky-2020*.zip"
         target: "target/universal/mocky.zip"
-    - name: 'Get Previous tag'
-      id: previoustag
-      uses: "WyriHaximus/github-action-get-previous-tag@master"
-      env:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
