--- a/.github/workflows/mocky.yml
+++ b/.github/workflows/mocky.yml
@@ -13,10 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
     - name: Force git fetch
       uses: fnkr/github-action-git-bash@v1.1
       with:
@@ -28,6 +24,10 @@ jobs:
       uses: "WyriHaximus/github-action-get-previous-tag@master"
       env:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     - name: Run tests
       run: sbt test it:test dist
     - name: rename dist file
@@ -41,7 +41,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
+        tag_name: ${{ steps.previoustag.outputs.tag }}
         release_name: Release ${{ steps.previoustag.outputs.tag }}
         draft: false
         prerelease: false
