--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Fetch tags
         uses: fnkr/github-action-git-bash@v1.1
         with:
-          args: "git fetch --tags"
+          args: git fetch --tags
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Extract last tag name
         id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@master"
+        uses: WyriHaximus/github-action-get-previous-tag@master
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -33,8 +33,8 @@ jobs:
       - name: rename dist file
         uses: canastro/copy-file-action@master
         with:
-          source: "target/universal/mocky-2020*.zip"
-          target: "target/universal/mocky.zip"
+          source: target/universal/mocky-2020*.zip
+          target: mocky-release.zip
       - name: Create Githbub Release
         id: create_release
         uses: actions/create-release@v1
@@ -52,6 +52,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: target/universal/mocky.zip
-          asset_name: mocky.zip
+          asset_path: mocky-release.zip
+          asset_name: mocky-${{ steps.previoustag.outputs.tag }}.zip
           asset_content_type: application/zip
