Rework admon & server launch

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -34,8 +34,8 @@ settings {
                                   # See https://www.postgresql.org/docs/11/pgcrypto.html#PGCRYPTO-ICFC-TABLE
   }
   admin {
-    password = ${SETTINGS_ADMIN_PASSWORD}   # Administration passowrd
-    header = "X-Auth-Token"                 # Token in which the administration token must be sent
+    password = ${SETTINGS_ADMIN_PASSWORD}   # Administration password
+    header = "X-Auth-Token"                 # Token in which the administration password must be sent
   }
 }
 
