--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,16 +24,26 @@ jobs:
         uses: WyriHaximus/github-action-get-previous-tag@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Cache SBT ivy cache
+        uses: actions/cache@v1
+        with:
+          path: ~/.ivy2/cache
+          key: ${{ runner.os }}-sbt-ivy-cache-${{ hashFiles('**/build.sbt') }}
+      - name: Cache SBT
+        uses: actions/cache@v1
+        with:
+          path: ~/.sbt
+          key: ${{ runner.os }}-sbt-${{ hashFiles('**/build.sbt') }}
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
       - name: Run tests and generate release artifact
-        run: sbt test it:test dist
+        run:  cd server; sbt test it:test dist
       - name: rename dist file
         uses: canastro/copy-file-action@master
         with:
-          source: target/universal/mocky-2020*.zip
+          source: server/target/universal/mocky-2020*.zip
           target: mocky-release.zip
       - name: Create Githbub Release
         id: create_release
