--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,19 +1,26 @@
 server {
   host = "0.0.0.0"
-  port = 8080                              , port = ${?SERVER_PORT}
+  port = 8080, port = ${?SERVER_PORT}
 }
 
 database {
   driver = "org.postgresql.Driver"
   url = "jdbc:postgresql://localhost/mocky", url = ${?DATABASE_URL}
-  user = mocky                             , user = ${?DATABASE_USER}
-  password = mocky                         , password = ${?DATABASE_URL}
+  user = mocky, user = ${?DATABASE_USER}
+  password = mocky, password = ${?DATABASE_URL}
   thread-pool-size = 32
 }
 
 settings {
+  admin {
+    # Administration password
+    password = ${SETTINGS_ADMIN_PASSWORD}
+    # Token in which the administration password must be sent
+    header = "X-Auth-Token", header = ${?SETTINGS_ADMIN_HEADER}
+  }
   cors {
-    domain: mocky.io
+    # Domain allowed to send CORS requests
+    domain: mocky.io, domain = ${?CORS_DOMAIN}
   }
   throttle {
     amount: 100                   # How many request are allowed by `per` duration
@@ -32,10 +39,6 @@ settings {
     bcrypt-iterations = 14        # How many bcrypt iterations to run for hashing password.
                                   # Higher number means higher security but lag when creating mock
                                   # See https://www.postgresql.org/docs/11/pgcrypto.html#PGCRYPTO-ICFC-TABLE
-  }
-  admin {
-    password = ${SETTINGS_ADMIN_PASSWORD}   # Administration password
-    header = "X-Auth-Token"                 # Token in which the administration password must be sent
   }
 }
 
