--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,10 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "express-sslify": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -20,7 +21,7 @@
     "typescript": "~3.8.2"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
