--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -1,26 +1,26 @@
 server {
   host = "0.0.0.0"
-  port = 8080, port = ${?SERVER_PORT}
+  port = 8080, port = ${?MOCKY_SERVER_PORT}
 }
 
 database {
   driver = "org.postgresql.Driver"
-  url = "jdbc:postgresql://localhost/mocky", url = ${?DATABASE_URL}
-  user = mocky, user = ${?DATABASE_USER}
-  password = mocky, password = ${?DATABASE_URL}
-  thread-pool-size = 32
+  url = "jdbc:postgresql://localhost/mocky", url = ${?MOCKY_DATABASE_URL}
+  user = mocky, user = ${?MOCKY_DATABASE_USER}
+  password = mocky, password = ${?MOCKY_DATABASE_PASSWORD}
+  thread-pool-size = 32, thread-pool-size = ${?MOCKY_DATABASE_POOL_SIZE}
 }
 
 settings {
   admin {
-    # Administration password
-    password = ${SETTINGS_ADMIN_PASSWORD}
+    # Administration password (required!)
+    password = ${MOCKY_ADMIN_PASSWORD}
     # Token in which the administration password must be sent
-    header = "X-Auth-Token", header = ${?SETTINGS_ADMIN_HEADER}
+    header = "X-Auth-Token", header = ${?MOCKY_ADMIN_HEADER}
   }
   cors {
     # Domain allowed to send CORS requests
-    domain: mocky.io, domain = ${?CORS_DOMAIN}
+    domain: mocky.io, domain = ${?MOCKY_CORS_DOMAIN}
   }
   throttle {
     amount: 100                   # How many request are allowed by `per` duration
