--- a/client/package.json
+++ b/client/package.json
@@ -1,30 +1,41 @@
 {
-  "name": "my-app",
+  "name": "mocky",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.2.5",
+    "@testing-library/dom": "^7.5.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/jquery": "^3.3.38",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.5",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1",
     "express-sslify": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-typed": "^1.2.0",
+    "redux": "^4.0.5",
     "typescript": "~3.8.2"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src --color",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css,json}\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,5 +51,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-plugin-import": "2.20.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "2.5.1",
+    "prettier": "^2.0.5"
   }
 }
